--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Os Vingadores</title>
+  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
+  <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
+  <link rel="preload" href="./css/style.css" as="style">
+  <link rel="stylesheet" href="./css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+ <header class="header">
+    <div class="header-container">
+      <nav class="nav">
+          <ul class="menu font-x-h cor-0">
+            <li><a href="/">Início</a></li>
+            <li><a href="/">Quadrinhos</a></li>
+            <li><a href="/">Contato</a></li>
+          </ul>
+      </nav>
+    </div>
+ </header> 
+
+ <section class="introducao-bg container">
+   <div class="introducao">
+      <h1>vingadores</h1>
+      <h2>"avengers, assemble!"</h2>
+   </div>
+ </section>
+
+ <section class="herois-bg container">
+  <div class="herois">
+    <div class="homendeferro">
+      <div>
+        <img src="" alt="">
+        <p>HOMEM DE FERRO</p>
+      </div>
+    </div>
+    <div class="capitaoamerica">
+      <div>
+        <img src="" alt="">
+        <p>CAPITÃO AMÉRICA</p>
+      </div>
+    </div>
+    <div class="viuvanegra">
+      <div>
+        <img src="" alt="">
+        <p>VIÚVA NEGRA</p>
+      </div>
+    </div>
+    <div class="thor">
+      <div>
+        <img src="" alt="">
+        <p>THOR</p>
+      </div>
+    </div>
+    <div class="gaviaoarqueiro">
+      <div>
+        <img src="" alt="">
+        <p>GAVIÃO ARQUEIRO</p>
+      </div>
+    </div>
+    <div class="hulk">
+      <div>
+        <img src="" alt="">
+        <p>HULK</p>
+      </div>
+    </div>
+  </div>
+</section>
+<article>
+  <div class="titulo-principal">
+    <p>História</p>
+  </div>
+  <div class="artigo-principal">
+      <p>Os Vingadores (ou The Avengers) é um filme de super-herói de 2012, baseado na equipe Os Vingadores, da Marvel Comics, produzido pela Marvel Studios.</p>
+      <p>Loki, o irmão de Thor, ganha acesso ao poder ilimitado do cubo cósmico ao roubá-lo de dentro das instalações da S.H.I.E.L.D. Nick Fury, o diretor desta agência internacional que mantém a paz, logo reúne os únicos super-heróis que serão capazes de defender a Terra de ameaças sem precedentes. Homem de Ferro, Capitão América, Hulk, Thor, Viúva Negra e Gavião Arqueiro formam o time dos sonhos de Fury, mas eles precisam aprender a colocar os egos de lado e agir como um grupo em prol da humanidade.</p>
+      <p>O desenvolvimento do filme começou quando a Marvel Studios recebeu um empréstimo da Merrill Lynch em abril de 2005. A produção começou em abril de 2011 e a pré-estreia ocorreu no dia 11 de abril de 2012 no El Capitan Theatre, em Hollywood, sendo lançado nos Estados Unidos em 4 de maio de 2012. Os Vingadores entrou em cartaz no Brasil no dia 27 de Abril, e arrecadou mais de US$ 1,5 bilhão em todo o mundo, ocupando a primeira produção da Marvel a gerar US$ 1 bilhão em vendas de ingressos e a maior bilheteria de filmes de super-heróis. Atualmente, é o oitavo filme de maior bilheteria de todos os tempos.</p>
+      <p>A sequência, intitulada Avengers: Age of Ultron, estreou em 1 de maio de 2015, e mais duas sequências foram filmadas simultaneamente, sendo elas Avengers: Infinity War e Avengers: Endgame. Infinity War estreou em 27 de abril de 2018 e sua sequência, Endgame, foi lançada no dia 26 de abril de 2019.</p>
+      <p>Uma das características mais impressionantes nos quadrinhos de super-heróis é a interligação entre as histórias. Um fato ocorrido pode repercutir trazendo consequências inesperadas para personagens que sequer têm relação direta com a origem, criando um universo ao mesmo tempo grandioso e assustador, pela necessidade de conhecer cada uma de suas pontas de forma a compreendê-lo como um todo. Nos cinemas a situação não é tão complexa assim, afinal de contas o número de filmes é bem menor que o de publicações mensais nas bancas. Ainda assim, a tarefa encampada pela Marvel é ousada: recriar este mesmo universo, com deixas propositais espalhadas em diversos filmes de forma que, futuramente, façam sentido na história como um todo. Os Vingadores - The Avengers é o grande ápice deste planejamento.</p>
+  </div>
+</article>
+          
+<footer>
+    <p>Copyright © Juberlandio Oliveira - 2023</p>
+</footer>
 </body>
 </html>
