--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="header-container">
       <nav class="nav">
           <ul class="menu font-x-h cor-0">
-            <li><a href="/">Início</a></li>
-            <li><a href="/">Quadrinhos</a></li>
-            <li><a href="/">Contato</a></li>
+            <li class="inicio"><a  href="/">Início</a></li>
+            <li class="quadrinhos"><a  href="/">Quadrinhos</a></li>
+            <li class="contato"><a href="/">Contato</a></li>
           </ul>
       </nav>
     </div>
