Commit Final dia 05 02 2023

--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
- <header class="header">
-    <div class="header-container">
-      <nav class="nav">
-          <ul class="menu font-x-h cor-0">
-            <li class="inicio"><a  href="/">Início</a></li>
-            <li class="quadrinhos"><a  href="/">Quadrinhos</a></li>
-            <li class="contato"><a href="/">Contato</a></li>
-          </ul>
-      </nav>
-    </div>
- </header> 
-
- <section class="introducao-bg container">
+ <section class="introducao-bg">
    <div class="introducao">
+        <header class="header">
+          <div class="header-container">
+            <nav class="nav">
+                <ul class="menu font-x-h cor-0">
+                  <li class="inicio"><a href="/">Início</a></li>
+                  <li class="quadrinhos"><a href="/">Quadrinhos</a></li>
+                  <li class="contato"><a href="/">Contato</a></li>
+                </ul>
+            </nav>
+          </div>
+      </header> 
       <h1>vingadores</h1>
       <h2>"avengers, assemble!"</h2>
    </div>
  </section>
 
- <section class="herois-bg container">
+ <section class="herois-bg">
   <div class="herois">
     <div class="homendeferro">
       <div>
