--- a/index.html
+++ b/index.html
@@ -14,23 +14,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
- <section class="introducao-bg">
-   <div class="introducao">
-        <header class="header">
-          <div class="header-container">
-            <nav class="nav">
-                <ul class="menu font-x-h cor-0">
-                  <li class="inicio"><a href="/">Início</a></li>
-                  <li class="quadrinhos"><a href="/">Quadrinhos</a></li>
-                  <li class="contato"><a href="/">Contato</a></li>
-                </ul>
-            </nav>
+<section class="introducao-bg">
+  <div class="introducao">
+    <div class="header">
+      <div class="header-container">
+        <nav class="nav">
+          <ul class="menu font-x-h cor-0">
+            <li class="inicio"><a href="/">Início</a></li>
+            <li class="quadrinhos"><a href="/">Quadrinhos</a></li>
+            <li class="contato"><a href="/">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h1 class="titulo-principal font-xxl">vingadores</h1>
+      </div>
+      <div class="quadrado">
+        <div>
+          <div class="posicao">
+            <h2 class="titulo-secundario font-l cor-p1">"avengers, assemble!"</h2>
+            <span class="border"></span>
           </div>
-      </header> 
-      <h1>vingadores</h1>
-      <h2>"avengers, assemble!"</h2>
-   </div>
- </section>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
  <section class="herois-bg">
   <div class="herois">
@@ -73,7 +84,7 @@
   </div>
 </section>
 <article>
-  <div class="titulo-principal">
+  <div class="titulo">
     <p>História</p>
   </div>
   <div class="artigo-principal">
