--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,35 +14,36 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<section class="introducao-bg">
-  <div class="introducao">
-    <div class="header">
-      <div class="header-container">
-        <nav class="nav">
-          <ul class="menu font-x-h cor-0">
-            <li class="inicio"><a href="/">Início</a></li>
-            <li class="quadrinhos"><a href="/">Quadrinhos</a></li>
-            <li class="contato"><a href="/">Contato</a></li>
-          </ul>
-        </nav>
+  <section class="main-bg">
+    <div class="main">
+      <div class="header">
+        <div class="header-container">
+          <nav class="nav">
+            <ul class="menu font-x-h cor-0">
+              <li class="inicio"><a href="/">Início</a></li>
+              <li class="quadrinhos"><a href="/">Quadrinhos</a></li>
+              <li class="contato"><a href="/">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
-    </div>
-    <div>
       <div>
-        <h1 class="titulo-principal font-xxl">vingadores</h1>
-      </div>
-      <div class="quadrado">
         <div>
-          <div class="posicao">
-            <h2 class="titulo-secundario font-l cor-p1">"avengers, assemble!"</h2>
-            <span class="border"></span>
+          <h1 class="titulo-principal font-xxl">vingadores</h1>
+        </div>
+        <div class="quadrado">
+          <div>
+            <div class="posicao">
+              <h2 class="titulo-secundario font-l cor-p1">"avengers, assemble!"</h2>
+              <span class="border"></span>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
  <section class="herois-bg">
   <div class="herois">
