--- a/index.html
+++ b/index.html
@@ -64,46 +64,48 @@
           <img src="media/img/card3.png" alt="">
           <p class="container-descricao font-s cor-0">Viúva Negra</p>
         </div>
-      </div>
-      <div class="thor">
-        <div class="container-img-3">
-          <img src="media/img/card4.png" alt="">
-          <p class="container-descricao font-s cor-0">Thor</p>
         </div>
-      </div>
-      <div class="gaviaoarqueiro">
-        <div class="container-img-4" >
-          <img src="media/img/card5.png" alt="">
-          <p class="container-descricao font-s cor-0">Gavião Arqueiro</p>
+        <div class="thor">
+          <div class="container-img-3">
+            <img src="media/img/card4.png" alt="">
+            <p class="container-descricao font-s cor-0">Thor</p>
+          </div>
         </div>
-      </div>
-      <div class="hulk">
-        <div class="container-img-5">
-          <img src="media/img/card6.png" alt="">
-          <p class="container-descricao font-s cor-0">Hulk</p>
+        <div class="gaviaoarqueiro">
+          <div class="container-img-4">
+            <img src="media/img/card5.png" alt="">
+            <p class="container-descricao font-s cor-0">Gavião Arqueiro</p>
+          </div>
         </div>
-      </div>
-    </div>
-  </section>
-  <article class="historia-bg">
-    <div class="historia">
-      <div class="container-historia">
-        <p class="titulo-historia font-xl cor-0">História</p>
-      </div>
-      <div class="container-artigo font-s">
-        <p class="paragrafo cor-0">Os Vingadores (ou The Avengers) é um filme de super-herói de 2012, baseado na equipe Os Vingadores, da Marvel Comics, produzido pela Marvel Studios.</p>
-        <p class="paragrafo cor-0">Loki, o irmão de Thor, ganha acesso ao poder ilimitado do cubo cósmico ao roubá-lo de dentro das instalações da S.H.I.E.L.D. Nick Fury, o diretor desta agência internacional que mantém a paz, logo reúne os únicos super-heróis que serão capazes de defender a Terra de ameaças sem precedentes. Homem de Ferro, Capitão América, Hulk, Thor, Viúva Negra e Gavião Arqueiro formam o time dos sonhos de Fury, mas eles precisam aprender a colocar os egos de lado e agir como um grupo em prol da humanidade.</p>
-        <p class="paragrafo cor-0">O desenvolvimento do filme começou quando a Marvel Studios recebeu um empréstimo da Merrill Lynch em abril de 2005. A produção começou em abril de 2011 e a pré-estreia ocorreu no dia 11 de abril de 2012 no El Capitan Theatre, em Hollywood, sendo lançado nos Estados Unidos em 4 de maio de 2012. Os Vingadores entrou em cartaz no Brasil no dia 27 de Abril, e arrecadou mais de US$ 1,5 bilhão em todo o mundo, ocupando a primeira produção da Marvel a gerar US$ 1 bilhão em vendas de ingressos e a maior bilheteria de filmes de super-heróis. Atualmente, é o oitavo filme de maior bilheteria de todos os tempos.</p>
-        <p class="paragrafo cor-0">A sequência, intitulada Avengers: Age of Ultron, estreou em 1 de maio de 2015, e mais duas sequências foram filmadas simultaneamente, sendo elas Avengers: Infinity War e Avengers: Endgame. Infinity War estreou em 27 de abril de 2018 e sua sequência, Endgame, foi lançada no dia 26 de abril de 2019.</p>
-        <p class="paragrafo cor-0">Uma das características mais impressionantes nos quadrinhos de super-heróis é a interligação entre as histórias. Um fato ocorrido pode repercutir trazendo consequências inesperadas para personagens que sequer têm relação direta com a origem, criando um universo ao mesmo tempo grandioso e assustador, pela necessidade de conhecer cada uma de suas pontas de forma a compreendê-lo como um todo. Nos cinemas a situação não é tão complexa assim, afinal de contas o número de filmes é bem menor que o de publicações mensais nas bancas. Ainda assim, a tarefa encampada pela Marvel é ousada: recriar este mesmo universo, com deixas propositais espalhadas em diversos filmes de forma que, futuramente, façam sentido na história como um todo. Os Vingadores - The Avengers é o grande ápice deste planejamento.</p>
-      </div>
-    </div>     
-  </article>
-<footer class="rodape-bg">
-  <div class="rodape">
-    <p class="footer-texto font-s cor-0">Copyright © Juberlandio Oliveira - 2023</p>
-  </div>
-</footer>
-</body>
+        <div class="hulk">
+          <div class="container-img-5">
+            <img src="media/img/card6.png" alt="">
+            <p class="container-descricao font-s cor-0">Hulk</p>
+          </div>
+        </div>
+        </div>
+        </section>
+        <article class="historia-bg">
+          <div class="historia">
+            <div class="container-historia">
+              <p class="titulo-historia font-xl cor-0">História</p>
+            </div>
+            <div class="container-artigo font-s">
+              <div>
+                <p class="paragrafo cor-0">Os Vingadores (ou The Avengers) é um filme de super-herói de 2012, baseado na equipe Os Vingadores, da Marvel Comics, produzido pela Marvel Studios.</p>
+                <p class="paragrafo cor-0">Loki, o irmão de Thor, ganha acesso ao poder ilimitado do cubo cósmico ao roubá-lo de dentro das instalações da S.H.I.E.L.D. Nick Fury, o diretor desta agência internacional que mantém a paz, logo reúne os únicos super-heróis que serão capazes de defender a Terra de ameaças sem precedentes. Homem de Ferro, Capitão América, Hulk, Thor, Viúva Negra e Gavião Arqueiro formam o time dos sonhos de Fury, mas eles precisam aprender a colocar os egos de lado e agir como um grupo em prol da humanidade.</p>
+                <p class="paragrafo cor-0">O desenvolvimento do filme começou quando a Marvel Studios recebeu um empréstimo da Merrill Lynch em abril de 2005. A produção começou em abril de 2011 e a pré-estreia ocorreu no dia 11 de abril de 2012 no El Capitan Theatre, em Hollywood, sendo lançado nos Estados Unidos em 4 de maio de 2012. Os Vingadores entrou em cartaz no Brasil no dia 27 de Abril, e arrecadou mais de US$ 1,5 bilhão em todo o mundo, ocupando a primeira produção da Marvel a gerar US$ 1 bilhão em vendas de ingressos e a maior bilheteria de filmes de super-heróis. Atualmente, é o oitavo filme de maior bilheteria de todos os tempos.</p>
+                <p class="paragrafo cor-0">A sequência, intitulada Avengers: Age of Ultron, estreou em 1 de maio de 2015, e mais duas sequências foram filmadas simultaneamente, sendo elas Avengers: Infinity War e Avengers: Endgame. Infinity War estreou em 27 de abril de 2018 e sua sequência, Endgame, foi lançada no dia 26 de abril de 2019.</p>
+                <p class="paragrafo cor-0">Uma das características mais impressionantes nos quadrinhos de super-heróis é a interligação entre as histórias. Um fato ocorrido pode repercutir trazendo consequências inesperadas para personagens que sequer têm relação direta com a origem, criando um universo ao mesmo tempo grandioso e assustador, pela necessidade de conhecer cada uma de suas pontas de forma a compreendê-lo como um todo. Nos cinemas a situação não é tão complexa assim, afinal de contas o número de filmes é bem menor que o de publicações mensais nas bancas. Ainda assim, a tarefa encampada pela Marvel é ousada: recriar este mesmo universo, com deixas propositais espalhadas em diversos filmes de forma que, futuramente, façam sentido na história como um todo. Os Vingadores - The Avengers é o grande ápice deste planejamento.</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <footer class="rodape-bg">
+          <div class="rodape">
+            <p class="footer-texto font-s cor-0">Copyright © Juberlandio Oliveira - 2023</p>
+          </div>
+        </footer>
+        </body>
 
 </html> 
