--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <p class="titulo-historia font-xl cor-0">História</p>
             </div>
             <div class="container-artigo font-s">
-              <div>
+              <div class="container-1">
                 <p class="paragrafo cor-0">Os Vingadores (ou The Avengers) é um filme de super-herói de 2012, baseado na equipe Os Vingadores, da Marvel Comics, produzido pela Marvel Studios.</p>
                 <p class="paragrafo cor-0">Loki, o irmão de Thor, ganha acesso ao poder ilimitado do cubo cósmico ao roubá-lo de dentro das instalações da S.H.I.E.L.D. Nick Fury, o diretor desta agência internacional que mantém a paz, logo reúne os únicos super-heróis que serão capazes de defender a Terra de ameaças sem precedentes. Homem de Ferro, Capitão América, Hulk, Thor, Viúva Negra e Gavião Arqueiro formam o time dos sonhos de Fury, mas eles precisam aprender a colocar os egos de lado e agir como um grupo em prol da humanidade.</p>
                 <p class="paragrafo cor-0">O desenvolvimento do filme começou quando a Marvel Studios recebeu um empréstimo da Merrill Lynch em abril de 2005. A produção começou em abril de 2011 e a pré-estreia ocorreu no dia 11 de abril de 2012 no El Capitan Theatre, em Hollywood, sendo lançado nos Estados Unidos em 4 de maio de 2012. Os Vingadores entrou em cartaz no Brasil no dia 27 de Abril, e arrecadou mais de US$ 1,5 bilhão em todo o mundo, ocupando a primeira produção da Marvel a gerar US$ 1 bilhão em vendas de ingressos e a maior bilheteria de filmes de super-heróis. Atualmente, é o oitavo filme de maior bilheteria de todos os tempos.</p>
