Commit Final dia 07 01 2023

--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
       </div>
     </div>
   </section>
-
-  <section class="herois-bg">
-    <div class="herois">
-      <div class="homendeferro">
-        <div class="container-img">
-          <img src="media/img/card1.png" alt="">
-          <p class="container-descricao font-s cor-0">Homem de Ferro</p>
-        </div>
+<section class="herois-bg">
+  <div class="herois">
+    <div class="homendeferro">
+      <a href="./homemdeferro.html">
+      <div class="container-img">
+        <img src="media/img/card1.png" alt="">
+        <p class="container-descricao font-s cor-0">Homem de Ferro</p>
       </div>
+      </a>
+    </div>
       <div class="capitaoamerica">
         <div class="container-img-1">
           <img src="media/img/card2.png" alt="">
