--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
       <section class="herois-bg">
         <div class="herois">
-          <div class="card homendeferro">
+          <div class="homendeferro">
             <a href="./homemdeferro.html">
               <div class="container-img">
                 <img src="media/img/card1.png" alt="">
@@ -54,7 +54,7 @@
               </div>
             </a>
           </div>
-          <div class="card capitaoamerica">
+          <div class="capitaoamerica">
             <a href="./capitaoamerica.html">
               <div class="container-img-1">
                 <img src="media/img/card2.png" alt="">
@@ -62,7 +62,7 @@
               </div>
             </a>
           </div>
-          <div class="card viuvanegra">
+          <div class="viuvanegra">
             <a href="./viuvanegra.html">
               <div class="container-img-2">
                 <img src="media/img/card3.png" alt="">
@@ -70,7 +70,7 @@
               </div>
             </a>
           </div>
-          <div class="card thor">
+          <div class="thor">
             <a href="./thor.html">
               <div class="container-img-3">
                 <img src="media/img/card4.png" alt="">
@@ -78,7 +78,7 @@
               </div>
             </a>
           </div>
-          <div class="card gaviaoarqueiro">
+          <div class="gaviaoarqueiro">
             <a href="./gaviaoarqueiro.html">
               <div class="container-img-4">
                 <img src="media/img/card5.png" alt="">
@@ -86,7 +86,7 @@
               </div>
             </a>
           </div>
-          <div class="card hulk">
+          <div class="hulk">
             <a href="./hulk.html">
               <div class="container-img-5">
                 <img src="media/img/card6.png" alt="">
