--- a/thor.html
+++ b/thor.html
@@ -7,8 +7,8 @@
   <title>Homem de Ferro</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
-  <link rel="preload" href="./css/style.css" as="style">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,7 +52,7 @@
       <div class="container-artigo-vingadores font-s">
         <div class="container-1">
           <img src="media/img/0_avengers-thor.png" alt="Imagem Homem de Ferro">
-          <p class="paragrafo cor-0">Auto-descrito como gênio, bilionário, playboy e filantropo, possui uma armadura eletromecânica feita por ele mesmo. Downey foi escalado como parte de seu contrato de quatro filme com a Marvel Studios, que incluiu Homem de Ferro 2 e Os Vingadores. Downey disse que ele, inicialmente, forçou Whedon a fazer com que Stark fosse o personagem principal: "Bem, eu disse, 'Eu preciso estar na sequência de abertura. Eu não sei o que você está pensando, mas Tony precisa dirigir essa coisa.' Ele disse, 'Tudo bem, vamos tentar isso.' Nós tentamos e não funcionou, porque este é um tipo diferente de coisa, a história, a ideia e o tema, e todo mundo é apenas um braço do polvo." Sobre a evolução do personagem dos filmes anteriores, Downey disse: "Em Homem de Ferro, que foi uma história de origem, ele era sua própria epifania e redenção. </p>
+          <p class="paragrafo cor-0">O príncipe herdeiro de Asgard, com base na mitologia nórdica divindade de mesmo nome. Hemsworth foi escolhido como parte de um acordo de vários filmes. Ele já havia trabalhado com Joss Whedon em The Cabin in the Woods. Hemsworth disse que ele foi capaz de manter a força que ele construiu para Thor, aumentando a sua admissão à comida, consistindo de peito de frango, peixe, carne e ovos todos os dias. Quando perguntado exatamente quanto, Hemsworth disse: "Meu peso corporal em proteína!", ele observou que a motivação de Thor "é muito mais de uma questão pessoal, no sentido de que ele e seu irmão que está agitando as coisas. Considerando todos os outros, é um cara mau que eles tem que levar para baixo. É uma abordagem diferente para mim, ou para Thor. Ele está constantemente tendo que lutar pelo bem maior e que ele deveria fazer contra ele é seu irmão mais novo... Eu tenho sido frustrado com meus irmãos, às vezes, ou a família, mas eu sou o único que tem permissão para estar zangado com eles. Há um pouco disso".</p>
         </div>
       </div>
       <div class="botao font-s cor-0"><a href="index.html"><p>Voltar</p></a></div>
