--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Os Vingadores</title>
-  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer">
+  <meta name="description" content="Os Vingadores">
   <link rel="icon" href="./media/svg/favicon.svg" type="image/svg+x">
   <link rel="preload" href="./css/style.min.css" as="style">
   <link rel="stylesheet" href="./css/style.min.css">
